k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-api
  labels:
    app: order-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-api

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: order-api

    spec:
      containers:
        - name: order-api
          image: order-api:security-test
          imagePullPolicy: IfNotPresent


          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"


          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1


          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
