k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - name: postgres
              containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - order_user
                - -d
                - orders_db
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - order_user
                - -d
                - orders_db
            initialDelaySeconds: 15
            periodSeconds: 15

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
