k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-api

spec:
  type: ClusterIP

  selector:
    app: order-api

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
